After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 747608 - Scrollbar hiding / unhiding does not work with a stylus
Scrollbar hiding / unhiding does not work with a stylus
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkScrolledWindow
3.16.x
Other Linux
: Normal normal
: ---
Assigned To: gtkdev
gtkdev
Depends on:
Blocks:
 
 
Reported: 2015-04-10 09:32 UTC by ax487
Modified: 2015-04-13 16:11 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
scrolledwindow: Show scrollbars on tablet devices (1.78 KB, patch)
2015-04-13 13:36 UTC, Carlos Garnacho
accepted-commit_now Details | Review

Description ax487 2015-04-10 09:32:42 UTC
Hello all,

I just noticed a rather big problem with gnome 3.16: The new scrolled window container automatically hides the scrollbars when the pointer leaves the widget and shows them again when the pointer reenters. I am using an X230T so I have both a trackpoint and a stylus. While everything works with the trackpoint the scrolled window does *not* react to the stylus entering/leaving the window. That is I can still click on everything in the window itselft but the scrollbars remain hidden.

Maybe this is because the stylus uses absolute positioning. Anyways I am stuck without scrollbars while using my stylus which is a big problem for me.

You can reproduce this using the scrolled window example from pygtk or anything similar.

ax487
Comment 1 Matthias Clasen 2015-04-11 13:41:17 UTC
as a short-term workaround, if you set GTK_OVERLAY_SCROLLING=0 in the environment, scrollbars will be always present.
Comment 2 Carlos Garnacho 2015-04-13 13:36:57 UTC
Created attachment 301458 [details] [review]
scrolledwindow: Show scrollbars on tablet devices

The code managing scrollbars visibility was too pervasively checking for
mouse devices, leaving pen/eraser/cursor devices with no scrollbars at
all. Relax these checks a bit, and actually toggle full-width scrollbars
on pen/eraser devices, so it is an easier target.
Comment 3 Matthias Clasen 2015-04-13 15:24:14 UTC
Review of attachment 301458 [details] [review]:

ok
Comment 4 Carlos Garnacho 2015-04-13 15:28:19 UTC
Attachment 301458 [details] pushed as 71c0efb - scrolledwindow: Show scrollbars on tablet devices
Comment 5 ax487 2015-04-13 16:11:09 UTC
Well, works for me :) Thanks